dataset1235/2025-2/1153765216/users/3623738290/executions/2747719322_3902794658.log
== SUBMISSION (2025-08-21 18:49:38)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome:" , nome)
print("Idade:" , idade)
print("Altura:" , altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
Altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
Altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
Altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
Altura: 1.89
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:40:38)
-- CODE: 
fulano= Larissa
YY=23
XXX=1.68

print(fulano)
print(YY)
print(XXX)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano= Larissa
            ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano= Larissa
            ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano= Larissa
            ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano= Larissa
            ^^^^^^^
NameError: name 'Larissa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:49:13)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome:" , nome)
print("idade:" , idade)
print("altura:" , altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:29:22)
-- CODE: 
nome="Larissa"
idade="23"
altura="1.68"

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.68
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.68
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:30:18)
-- CODE: 
nome=("Larissa")
idade=("23")
altura=("1.68")

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.68
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.68
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:46:18)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome")
print("idade")
print("altura")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:41:06)
-- CODE: 
fulano=<Larissa>
YY=23
XXX=1.68

print(fulano)
print(YY)
print(XXX)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 1
    fulano=<Larissa>
           ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 1
    fulano=<Larissa>
           ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 1
    fulano=<Larissa>
           ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 1
    fulano=<Larissa>
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:30:16)
-- CODE: 
nome=("Larissa")
idade=("23")
altura=("1.68")

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.68
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.68
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:38:51)
-- CODE: 
nome=("Larissa")
idade=("23")
altura=("1.68")

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.68
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.68
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.68
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:40:31)
-- CODE: 
fulano=Larissa
YY=23
XXX=1.68

print(fulano)
print(YY)
print(XXX)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:47:24)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome", nome)
print("idade", idade)
print("altura", altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:47:50)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome" , nome)
print("idade" , idade)
print("altura" , altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:29:24)
-- CODE: 
nome="Larissa"
idade="23"
altura="1.68"

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.68
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.68
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:46:00)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome")
print("idade")
print("altura")
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:48:28)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome:" , nome)
print("idade:" , idade)
print("altura:" , altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:48:29)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome:" , nome)
print("idade:" , idade)
print("altura:" , altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura: 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura: 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura: 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura: 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:38:52)
-- CODE: 
nome=("Larissa")
idade=("23")
altura=("1.68")

print(nome)
print(idade)
print(altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
1.68
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
1.68
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
1.68
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:41:32)
-- CODE: 
fulano=Larissa
YY=23
XXX=1.68
print(fulano)
print(YY)
print(XXX)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:41:13)
-- CODE: 
fulano=Larissa
YY=23
XXX=1.68

print(fulano)
print(YY)
print(XXX)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    fulano=Larissa
           ^^^^^^^
NameError: name 'Larissa' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-21 18:47:51)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome" , nome)
print("idade" , idade)
print("altura" , altura)
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura 1.89
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:47:23)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome", nome)
print("idade", idade)
print("altura", altura)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura 1.45
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura 1.79
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura 1.68
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura 1.89
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:41:24)
-- CODE: 
fulano=Larissa
YY=23
XXX=1.68

print(fulano=)
print(YY)
print(XXX)
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
-- ERROR:
File "XXXX", line 5
    print(fulano=)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
-- ERROR:
File "XXXX", line 5
    print(fulano=)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
-- ERROR:
File "XXXX", line 5
    print(fulano=)
                 ^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
-- ERROR:
File "XXXX", line 5
    print(fulano=)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:45:58)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome")
print("idade")
print("altura")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-21 18:46:16)
-- CODE: 
nome = input ("Digite seu nome")
idade = input ("Digite sua idade")
altura = input ("Digite sua altura")

print("Nome")
print("idade")
print("altura")
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Teresa
13
1.45
---- correct output:
Nome: Teresa
Idade: 13
Altura: 1.45
---- user output:
altura
-- TEST CASE 2:
---- input:
Marcelo
34
1.79
---- correct output:
Nome: Marcelo
Idade: 34
Altura: 1.79
---- user output:
altura
-- TEST CASE 3:
---- input:
Larissa
23
1.68
---- correct output:
Nome: Larissa
Idade: 23
Altura: 1.68
---- user output:
altura
-- TEST CASE 4:
---- input:
Jose
45
1.89
---- correct output:
Nome: Jose
Idade: 45
Altura: 1.89
---- user output:
altura
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
